tests/integration/errors/006_missing_block_wrapper.nesl
{
  key = R"""pv(no block wrapper)pv"""
}